2011-02-16
* add search method for XZ footer
* make lzip a dependency for the RPM
* start on XZ support. This does not yet work, so don't use.
* rework cpio unpacking slightly. There are still a few logic errors here that
need some love.

2011-02-15
* use 'file' to determine the size of squashfs file systems.
* introduce "genericSearch" and rewrite all checks in checks.py to use
genericSearch
* add stubs for XZ support
* small comment fixes and removal from dead code
* add stubs for lzip support

2011-02-13
* only pass data between cpio header and trailer to the cpio unpacker.
* start inlining methods in certain checks that don't have to be separate
* inline more methods, merge a few checks into one file
* add extra checks to cpio unpacking to ensure we are actually unpacking valid
cpio archives.

2011-02-12
* add proper options to license scanning program
* determine sha256 hashes for files scanned by license scanner
* fix cpio searching bug, might break some runs at the moment
* only license check certain files

2011-02-07
* move temporary directory creation into the while loop for
searching/unpacking gzip files to prevent duplicate scanning. This should be
done for other searches as well.
* add stub for adding directories containing the names of the compression to
make it easier to find things after a scan.
* move temporary dir creation into the while loop for most other scans as well

2011-02-06
* implement priorities for scanning, get rid of looping over configuration for
every scan, which was a bit silly.
* remove looping over configuration in XML printing
* small cleanups

2011-02-04
* add documentation for blacklisting
* add blacklisting for individual program scans

2011-02-03
* add blacklisting for tar, cpio and RPM

2011-01-30
* don't scan block devices or character devices
* don't enable ubifs, since I have not added the code yet :-/
* add code to store the configuration globally
* reenable ubifs